kubernetes/home/printer/klipper/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &appName klipper
  namespace: printer
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: *appName
  template:
    metadata:
      labels:
        app: *appName
    spec:
      nodeSelector:
        "feature.node.kubernetes.io/ender3": "true"
      shareProcessNamespace: true
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        supplementalGroups:
          - 27 # serial permissions
      containers:
        - name: klipper
          image: mkuf/klipper:v0.13.0
          args:
            - "-a"
            - "/run/klipper/klipper.sock"
            - "-I"
            - "/run/klipper/klipper.tty"
            - "/srv/printer_data/config/printer.cfg"
          # image: mkuf/klipper:v0.13.0-tools
          # command:
          #   - "sleep"
          #   - "infinity"
          securityContext:
            runAsGroup: 1000
            privileged: true
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
          volumeMounts:
            - mountPath: /run/klipper
              name: klipper-socket
            - mountPath: /srv/printer_data
              name: klipper-data
            - mountPath: /srv/printer_data/config
              name: klipper-config
              readOnly: true
            - mountPath: /dev/serial
              name: serial-devices
        - name: moonraker
          image: mkuf/moonraker:v0.11.0
          args:
            - "-d"
            - "/srv/printer_data"
          securityContext:
            runAsGroup: 1000
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 50m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 256Mi
          volumeMounts:
            - mountPath: /srv/printer_data
              name: klipper-data
            - mountPath: /srv/printer_data/config
              name: klipper-config
              readOnly: true
            - mountPath: /run/klipper
              name: klipper-socket
            - mountPath: /tmp
              name: moonraker-tmp
          ports:
            - containerPort: &httpPort 7125
              name: moonraker-http
          livenessProbe:
            httpGet:
              path: /
              port: *httpPort
          readinessProbe:
            httpGet:
              path: /
              port: *httpPort
      volumes:
        - name: klipper-socket
          emptyDir:
            sizeLimit: 1Mi
        - name: klipper-data
          persistentVolumeClaim:
            claimName: klipper-data
        - name: klipper-config
          configMap:
            name: klipper-config
        - name: moonraker-tmp
          emptyDir:
            sizeLimit: 500Mi
        - name: serial-devices
          hostPath:
            path: /dev/serial
            type: Directory
