kubernetes/home/printer/klipper/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: &appName klipper
  namespace: printer
spec:
  selector:
    app: *appName
  ports:
    - port: 7125
      targetPort: moonraker-http
      protocol: TCP
      name: moonraker-http
