kubernetes/home/printer/klipper/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &appName klipper
  namespace: printer
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
    external-dns.kubernetes.io/enabled: "true"
    external-dns.kubernetes.io/hostname: &host printer.saturn.ci
    external-dns.kubernetes.io/target: jupiter.saturn.ci
spec:
  ingressClassName: traefik
  rules:
  - host: *host
    http:
      paths:
      - pathType: Prefix
        path: /websocket
        backend:
          service:
            name: *appName
            port: 
              name: moonraker-http
      - pathType: Prefix
        path: /server
        backend:
          service:
            name: *appName
            port: 
              name: moonraker-http
      - pathType: Prefix
        path: /printer
        backend:
          service:
            name: *appName
            port: 
              name: moonraker-http
      - pathType: Prefix
        path: /machine
        backend:
          service:
            name: *appName
            port: 
              name: moonraker-http
      - pathType: Prefix
        path: /access
        backend:
          service:
            name: *appName
            port: 
              name: moonraker-http
  tls:
    - secretName: *host
      hosts:
        - *host
